tests/error/types-2.moc
void main() {
    int * p = NULL;
    *p = true;
}
